--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -8,6 +8,10 @@
     max-width: 1680px !important;
 }
 
+.notion-heading .notion-semantic-string{
+    line-height: 1 !important;
+}
+
 .notion-collection__header-wrapper{
     justify-content: center !important;
     margin-top: 3rem !important;
