--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -176,6 +176,9 @@ tbody.notion-collection-table__body{
         box-shadow: none !important;
         border: none !important;
         padding: 0px !important;
+        .notion-collection-card__cover{
+            flex: 0 0 290px !important;
+        }
         .notion-collection-card__content{
             width: auto !important;
             .notion-collection-card__property:nth-child(2){
