--- a/style/main.css
+++ b/style/main.css
@@ -382,6 +382,8 @@ tbody.notion-collection-table__body {
   border: 1px solid var(--color-border-default) !important;
   padding: 2rem !important;
   background: none !important;
+  -webkit-transition: all 0.4s !important;
+  transition: all 0.4s !important;
 }
 
 .notion-collection-card:hover {
