--- a/sass/base/_colors.scss
+++ b/sass/base/_colors.scss
@@ -26,6 +26,6 @@
     --color-hover-default: linear-gradient(to bottom, rgba(237, 237, 237, 0), rgb(208 106 78 / 10%) 98%)!important;
     --color-cta-background: rgb(32, 32, 32) !important;
     --color-cta-text: rgb(237, 237, 237) !important;
-    --color-bg-hover-default:rgb(238, 215, 198) !important;
+    --color-bg-hover-default:rgb(236 226 217) !important;
     --scrollbar-thumb-color: rgba(158, 158, 158, 0.1) !important;
 }
