--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -28,6 +28,7 @@ h1.notion-heading strong, h2.notion-heading strong, h3.notion-heading strong {
 
 h2.notion-heading{
     font-size: var(--font-size-5) !important;
+    line-height: .6 !important;
 }
 
 h3.notion-heading{
