--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -109,6 +109,7 @@ tbody.notion-collection-table__body{
 .notion-collection-card{
     display: flex !important;
     border: 1px solid var(--color-border-default)!important;
+    border-radius: 20px !important;
     padding: 2rem !important;
     background: none !important;
     -webkit-transition: all 0.4s !important;
