--- a/style/main.css
+++ b/style/main.css
@@ -26,7 +26,7 @@
   --color-hover-default: linear-gradient(to bottom, rgba(237, 237, 237, 0), rgb(208 106 78 / 10%) 98%)!important;
   --color-cta-background: rgb(32, 32, 32) !important;
   --color-cta-text: rgb(237, 237, 237) !important;
-  --color-bg-hover-default:rgb(238, 215, 198) !important;
+  --color-bg-hover-default:rgb(236 226 217) !important;
   --scrollbar-thumb-color: rgba(158, 158, 158, 0.1) !important;
 }
 
@@ -120,6 +120,7 @@ h1.notion-heading strong, h2.notion-heading strong, h3.notion-heading strong {
 
 h2.notion-heading {
   font-size: var(--font-size-5) !important;
+  line-height: 0.6 !important;
 }
 
 h3.notion-heading {
@@ -380,6 +381,7 @@ tbody.notion-collection-table__body {
 .notion-collection-card {
   display: flex !important;
   border: 1px solid var(--color-border-default) !important;
+  border-radius: 20px !important;
   padding: 2rem !important;
   background: none !important;
   -webkit-transition: all 0.4s !important;
