--- a/style/main.css
+++ b/style/main.css
@@ -3,7 +3,7 @@
   --color-bg-default: rgb(32, 32, 32) !important;
   --theme-gradient: linear-gradient(to bottom, rgba(32, 32, 32, 0), rgba(32, 32, 32, 1) 98%) !important;
   /* --color-border-default: hsla(0,0%,100%,.1) !important; */
-  --color-border-default: hsl(0deg 0% 43% / 10%) !important;
+  --color-border-default: hsl(0deg 0% 43% / 20%) !important;
   --color-bg-transparent-default: rgb(255, 255, 255, 0) !important;
   --color-text-default: hsl(0, 0%, 93%) !important;
   --color-date-default: rgb(152, 144, 144) !important;
@@ -18,7 +18,7 @@
 .theme-default body {
   --color-bg-default: rgb(237, 237, 237) !important;
   --theme-gradient: linear-gradient(to bottom, rgba(237, 237, 237, 0), rgba(237, 237, 237, 1) 98%)!important;
-  --color-border-default: hsla(0, 0%, 62%, 0.1) !important;
+  --color-border-default: hsla(0, 0%, 62%, 0.3) !important;
   --color-bg-transparent-default: rgb(0, 0, 0, 0) !important;
   --color-text-default: rgb(32, 32, 32) !important;
   --color-date-default: rgb(178, 178, 178) !important;
@@ -332,7 +332,7 @@ tbody.notion-collection-table__body {
   padding: 2rem !important;
   border-collapse: inherit !important;
   border: 1px solid var(--color-border-default) !important;
-  border-radius: 5px !important;
+  border-radius: 20px !important;
 }
 
 .notion-collection-table th {
@@ -361,12 +361,18 @@ tbody.notion-collection-table__body {
   overflow: inherit !important;
 }
 
-.notion-property.notion-property__file.property-63756178 a div {
+/* .notion-property.notion-property__file.property-63756178 a div{
+    width: 150px !important;
+    height: 150px !important;
+    img{
+        border-radius: 5px !important;
+    }
+} */
+.notion-collection-table__cell:nth-child(1) {
+  margin-top: -6rem !important;
   width: 150px !important;
   height: 150px !important;
-}
-.notion-property.notion-property__file.property-63756178 a div img {
-  border-radius: 5px !important;
+  border-radius: 8px !important;
 }
 
 .notion-collection-gallery {
@@ -509,10 +515,13 @@ html ::-webkit-scrollbar-thumb {
 
 @media (max-width: 600px) {
   tbody.notion-collection-table__body {
+    margin-top: 4rem !important;
     flex-direction: column !important;
+    gap: 7rem !important;
   }
   .notion-collection-table tr {
     width: 100% !important;
+    padding: 3rem 5rem !important;
   }
   .notion-collection-card {
     display: block !important;
