--- a/style/main.css
+++ b/style/main.css
@@ -361,18 +361,16 @@ tbody.notion-collection-table__body {
   overflow: inherit !important;
 }
 
-/* .notion-property.notion-property__file.property-63756178 a div{
-    width: 150px !important;
-    height: 150px !important;
-    img{
-        border-radius: 5px !important;
-    }
-} */
-.notion-collection-table__cell:nth-child(1) {
-  margin-top: -6rem !important;
+.notion-property.notion-property__file.property-63756178 a div {
   width: 150px !important;
   height: 150px !important;
+}
+.notion-property.notion-property__file.property-63756178 a div img {
   border-radius: 8px !important;
+}
+
+.notion-collection-table__cell:nth-child(1) {
+  margin-top: -6rem !important;
 }
 
 .notion-collection-gallery {
