--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -7,7 +7,7 @@
     --font-size-3: 2rem;
     --font-size-4: 2.5rem;
     --font-size-5: 3.75em;
-    --font-size-6: 7.5em;
+    --font-size-6: 5.5em;
 }
 
 h1, h2, h3, h4, h5, h6{
@@ -15,12 +15,9 @@ h1, h2, h3, h4, h5, h6{
 }
 
 h1.notion-heading{
-/*     font-size: var(--font-size-6) !important;
+    font-size: var(--font-size-6) !important;
     font-weight: 500 !important;
-    line-height: 1em !important;*/
-    padding-bottom: 1rem !important;
-    --tt-key: titles !important;
-    --tt-max: 500 !important;
+    line-height: 1em !important;
 }
 
 h1.notion-heading strong, h2.notion-heading strong, h3.notion-heading strong {
@@ -43,14 +40,3 @@ p{
 }
 
 
-@keyframes titles{
-    0%{
-        font-size: 1.25rem !important;
-        color:pink !important;
-    }
-    100%{
-        font-size: 6.5rem !important;
-        line-height: .9 !important;
-        color: aquamarine !important;
-    }
-}
