--- a/style/main.css
+++ b/style/main.css
@@ -99,7 +99,7 @@ p, h1, h2, h3, h4, h5, h6 {
   --font-size-3: 2rem;
   --font-size-4: 2.5rem;
   --font-size-5: 3.75em;
-  --font-size-6: 7.5em;
+  --font-size-6: 4em;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -111,6 +111,7 @@ h1.notion-heading {
   font-weight: 500 !important;
   line-height: 1em !important;
   padding-bottom: 1rem !important;
+  margin-bottom: 1rem !important;
 }
 
 h1.notion-heading strong, h2.notion-heading strong, h3.notion-heading strong {
