--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -30,6 +30,7 @@
 
 thead.notion-collection-table__head{
     border: none !important;
+    display: none !important;
 }
 
 tbody.notion-collection-table__body{
@@ -52,12 +53,9 @@ tbody.notion-collection-table__body{
 }
 
 .notion-collection-table tr{
-    /*display: table-cell !important;*/
-    /* flex-basis: 100% !important;
-    width: 100% !important; */
     padding: 2rem !important;
     display: grid !important;
-    grid-template-columns: 1fr 1fr 2fr !important;
+    grid-template-columns: 180px 300px !important;
     border-collapse: inherit !important;
     border: 1px solid var(--color-border-default) !important;
     border-radius: 20px !important;
@@ -80,9 +78,14 @@ tbody.notion-collection-table__body{
     overflow: unset !important;
 }
 
-.notion-collection-table td:last-child, .notion-collection-table th:last-child{
-    grid-column: span 3 !important;
+.notion-collection-table td:first-of-type, .notion-collection-table th:first-of-type{
+    grid-row: span 3 !important;
+    grid-column: span 1 !important;
 }
+
+/* .notion-collection-table td:last-child, .notion-collection-table th:last-child{
+    grid-column: span 3 !important;
+} */
 
 .notion-collection-table__head-cell{
     display: none !important;
