--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -74,7 +74,7 @@ tbody.notion-collection-table__body{
 .notion-collection-table td,
 .notion-collection-table th{
     justify-content: left !important;
-    /* height: auto !important; */
+    height: auto !important;
     overflow: unset !important;
 }
 
