--- a/style/main.css
+++ b/style/main.css
@@ -349,7 +349,7 @@ tbody.notion-collection-table__body {
 .notion-collection-table td,
 .notion-collection-table th {
   justify-content: left !important;
-  /* height: auto !important; */
+  height: auto !important;
   overflow: unset !important;
 }
 
