--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -257,7 +257,30 @@ html ::-webkit-scrollbar{
     }
 } 
 
+//callouts--Reviews
+.notion-callout{
+    padding: 24px !important;
+    padding-top: 20px !important;
+    border: 1px solid var(--color-border-default) !important;
+    border-radius: 20px !important;
+    margin-bottom: 24px !important;
+    font-size: var(--font-size-0) !important;
 
+}
+
+#page-index .notion-callout .notion-callout__icon{
+    display: none !important;
+}
+
+.notion-callout .notion-column:first-child{
+    width: fit-content !important;
+}
+
+.notion-callout .notion-column-list .notion-image{
+    width: 55px !important;
+    height: 55px !important;
+    border-radius: 50% !important;
+}
 
 //media queries
 
