--- a/style/main.css
+++ b/style/main.css
@@ -94,6 +94,7 @@ p, h1, h2, h3, h4, h5, h6 {
 }
 
 :root {
+  --font-size-0: 0.875rem !important
   --font-size-1: 1.25rem;
   --font-size-2: 1.5rem;
   --font-size-3: 2rem;
@@ -517,6 +518,29 @@ html ::-webkit-scrollbar-thumb {
   background-color: var(--scrollbar-thumb-color) !important;
   border-radius: 50px !important;
   border: 4px solid transparent !important;
+}
+
+.notion-callout {
+  padding: 24px !important;
+  padding-top: 20px !important;
+  border: 1px solid var(--color-border-default) !important;
+  border-radius: 20px !important;
+  margin-bottom: 24px !important;
+  font-size: var(--font-size-0) !important;
+}
+
+#page-index .notion-callout .notion-callout__icon {
+  display: none !important;
+}
+
+.notion-callout .notion-column:first-child {
+  width: fit-content !important;
+}
+
+.notion-callout .notion-column-list .notion-image {
+  width: 55px !important;
+  height: 55px !important;
+  border-radius: 50% !important;
 }
 
 @media (max-width: 600px) {
