--- a/style/main.css
+++ b/style/main.css
@@ -529,6 +529,15 @@ html ::-webkit-scrollbar-thumb {
   font-size: var(--font-size-0) !important;
 }
 
+#page-index .notion-callout {
+  margin: 0 !important;
+  overflow: visible !important;
+}
+
+.notion-callout .notion-column-list {
+  align-items: center !important;
+}
+
 #page-index .notion-callout .notion-callout__icon {
   display: none !important;
 }
