--- a/style/main.css
+++ b/style/main.css
@@ -552,6 +552,11 @@ html ::-webkit-scrollbar-thumb {
   border-radius: 50% !important;
 }
 
+.notion-callout__content {
+  margin-inline-start: 0px !important;
+  overflow: visible !important;
+}
+
 @media (max-width: 600px) {
   tbody.notion-collection-table__body {
     margin-top: 4rem !important;
