--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -276,6 +276,7 @@ html ::-webkit-scrollbar{
 
 .notion-callout .notion-column-list{
     align-items: center !important;
+    gap: 10px !important;
 }
 
 #page-index .notion-callout .notion-callout__icon{
