--- a/style/main.css
+++ b/style/main.css
@@ -536,6 +536,7 @@ html ::-webkit-scrollbar-thumb {
 
 .notion-callout .notion-column-list {
   align-items: center !important;
+  gap: 10px !important;
 }
 
 #page-index .notion-callout .notion-callout__icon {
