padding in notion callout

--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -306,6 +306,10 @@ html ::-webkit-scrollbar{
     overflow: visible !important;
 }
 
+.notion-callout .notion-column .notion-text__content{
+    padding: 0 !important;
+}
+
 //media queries
 
 @media (max-width: 600px) {
