--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -122,7 +122,7 @@ tbody.notion-collection-table__body{
     display: flex !important;
     border: 1px solid var(--color-border-default)!important;
     border-radius: 20px !important;
-    padding: 2rem !important;
+/*  padding: 2rem !important; */
     background: none !important;
     -webkit-transition: all 0.4s !important;
     transition: all 0.4s !important;
@@ -259,7 +259,7 @@ html ::-webkit-scrollbar{
 
 //callouts--Reviews
 .notion-callout{
-    padding: 24px !important;
+    padding: 2rem !important;
     padding-top: 20px !important;
     border: 1px solid var(--color-border-default) !important;
     border-radius: 20px !important;
@@ -276,7 +276,7 @@ html ::-webkit-scrollbar{
 
 .notion-callout .notion-column-list{
     align-items: center !important;
-    gap: 10px !important;
+    gap: 20px !important;
 }
 
 #page-index .notion-callout .notion-callout__icon{
@@ -288,7 +288,7 @@ html ::-webkit-scrollbar{
 }
 
 .notion-callout .notion-column:last-child{
-    margin-inline-start: 16px !important;
+    margin-inline-start: 0px !important;
 }
 
 .notion-callout .notion-column-list .notion-image{
@@ -302,7 +302,6 @@ html ::-webkit-scrollbar{
 }
 
 .notion-callout__content{
-    margin-inline-start: 0px !important;
     overflow: visible !important;
 }
 
