--- a/style/main.css
+++ b/style/main.css
@@ -395,7 +395,7 @@ tbody.notion-collection-table__body {
   display: flex !important;
   border: 1px solid var(--color-border-default) !important;
   border-radius: 20px !important;
-  padding: 2rem !important;
+  /*  padding: 2rem !important; */
   background: none !important;
   -webkit-transition: all 0.4s !important;
   transition: all 0.4s !important;
@@ -521,7 +521,7 @@ html ::-webkit-scrollbar-thumb {
 }
 
 .notion-callout {
-  padding: 24px !important;
+  padding: 2rem !important;
   padding-top: 20px !important;
   border: 1px solid var(--color-border-default) !important;
   border-radius: 20px !important;
@@ -536,7 +536,7 @@ html ::-webkit-scrollbar-thumb {
 
 .notion-callout .notion-column-list {
   align-items: center !important;
-  gap: 10px !important;
+  gap: 20px !important;
 }
 
 #page-index .notion-callout .notion-callout__icon {
@@ -548,7 +548,7 @@ html ::-webkit-scrollbar-thumb {
 }
 
 .notion-callout .notion-column:last-child {
-  margin-inline-start: 16px !important;
+  margin-inline-start: 0px !important;
 }
 
 .notion-callout .notion-column-list .notion-image {
@@ -562,7 +562,6 @@ html ::-webkit-scrollbar-thumb {
 }
 
 .notion-callout__content {
-  margin-inline-start: 0px !important;
   overflow: visible !important;
 }
 
