min height in callout

--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -309,6 +309,10 @@ html ::-webkit-scrollbar{
     padding: 0 !important;
 }
 
+.notion-callout .notion-column .notion-text{
+    min-height: auto !important;
+}
+
 //media queries
 
 @media (max-width: 600px) {
