--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -2,7 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Lexend:wght@300;400;500&display=swap');
 
 :root{
-    --font-size-0: 0.875rem !important
+    --font-size-0: 0.875rem !important;
     --font-size-1: 1.25rem;
     --font-size-2: 1.5rem;
     --font-size-3: 2rem;
