--- a/style/main.css
+++ b/style/main.css
@@ -94,7 +94,7 @@ p, h1, h2, h3, h4, h5, h6 {
 }
 
 :root {
-  --font-size-0: 0.875rem !important
+  --font-size-0: 0.875rem !important;
   --font-size-1: 1.25rem;
   --font-size-2: 1.5rem;
   --font-size-3: 2rem;
