--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -7,8 +7,8 @@
     --font-size-2: 1.5rem;
     --font-size-3: 2rem;
     --font-size-4: 2.5rem;
-    --font-size-5: 3.75em;
-    --font-size-6: 4em;
+    --font-size-5: 3.75rem;
+    --font-size-6: 4rem;
 }
 
 h1, h2, h3, h4, h5, h6{
