--- a/sass/layout/_nav.scss
+++ b/sass/layout/_nav.scss
@@ -16,6 +16,16 @@
     padding: 0px !important;
 }
 
+.super-navbar__button{
+    height: 100% !important;
+    cursor: pointer !important;
+    align-items: center !important;
+    justify-content: center !important;
+    display: flex !important;
+    opacity: 0.5 !important;
+    transition: opacity .3s ease-in-out !important;
+}
+
 .theme-switch{
     width: 22px !important;
     height: 22px !important;
@@ -42,6 +52,10 @@
 
 .theme-blackout .light-mode-icon{
     display: flex !important;
+}
+
+.theme-blackout .super-navbar__button{
+    stroke: var(--color-text-default) !important;
 }
 
 
@@ -77,4 +91,7 @@
     padding: 10px !important;
     border-radius: 8px !important;
 }
+
+
+
 
