--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -36,6 +36,7 @@ h2.notion-heading{
 h3.notion-heading{
     font-size: var(--font-size-2) !important;
     font-weight: 400 !important;
+    align-self: center !important;
 }
 
 p{
