--- a/style/main.css
+++ b/style/main.css
@@ -537,6 +537,23 @@ html ::-webkit-scrollbar-thumb {
   border: 4px solid transparent !important;
 }
 
+#page-index #block-b2e6841b5fd14eaba2ee741ece45a8e2 {
+  width: 100vw !important;
+  position: relative !important;
+  margin-left: -50vw !important;
+  height: auto !important;
+  left: 50% !important;
+  background: var(--color-bg-default) !important;
+  border-radius: 0 !important;
+}
+
+#page-index .notion-callout.bg-gray-light {
+  border: solid 1px transparent !important;
+  padding: 48px !important;
+  transition: box-shadow 0.2s ease-out !important;
+  color: var(--color-text-default) !important;
+}
+
 .notion-callout {
   padding: 2rem !important;
   padding-top: 20px !important;
