--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -263,6 +263,7 @@ html ::-webkit-scrollbar{
 //callout - About us
 #page-index #block-b2e6841b5fd14eaba2ee741ece45a8e2{
     width: 100vw !important;
+    text-align: left !important;
     position: relative !important;
     margin-left: -50vw !important;
     height: auto !important;
