--- a/style/main.css
+++ b/style/main.css
@@ -539,6 +539,7 @@ html ::-webkit-scrollbar-thumb {
 
 #page-index #block-b2e6841b5fd14eaba2ee741ece45a8e2 {
   width: 100vw !important;
+  text-align: left !important;
   position: relative !important;
   margin-left: -50vw !important;
   height: auto !important;
