--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -30,7 +30,8 @@ h1.notion-heading strong, h2.notion-heading strong, h3.notion-heading strong {
 
 h2.notion-heading{
     font-size: var(--font-size-5) !important;
-    line-height: .6 !important;
+    line-height: 1.1 !important;
+    padding-bottom: 2.5rem !important;
 }
 
 h3.notion-heading{
