--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -268,7 +268,7 @@ html ::-webkit-scrollbar{
     margin-left: -50vw !important;
     height: auto !important;
     left: 50% !important;
-    background: var(--color-bg-default) !important;
+    background: var(--color-link-default) !important;
     border-radius: 0 !important;
 }
 
@@ -277,7 +277,19 @@ html ::-webkit-scrollbar{
     padding: 48px !important;
     transition: box-shadow .2s ease-out !important;
     color: var(--color-text-default) !important;
+
+    .notion-callout .notion-column-list .notion-image{
+        width: auto !important;
+        height: auto !important;
+        border-radius: 20px !important;
+
+        img{
+            border-radius: 20px !important;
+        }
+    }
 }
+
+
 
 //callouts--Reviews
 .notion-callout{
