--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -287,6 +287,10 @@ html ::-webkit-scrollbar{
             border-radius: 20px !important;
         }
     }
+
+    .notion-column-list{
+        flex-wrap: nowrap !important;
+    }
 }
 
 
