--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -141,9 +141,9 @@ tbody.notion-collection-table__body{
 
 .notion-collection-card__cover{
     border-radius: 10px !important;
-    flex: 0 0 225px !important;
-    min-height: 220px !important;
-    height: 220px !important;
+    flex: 0 33% !important;
+    min-height: 160px !important;
+    height: 160px !important;
     margin: 0 40px 0 0 !important;
     min-width: 0px !important;
 }
