--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -211,7 +211,7 @@ tbody.notion-collection-table__body{
 
 //Notion Columns
 .notion-column-list{
-    gap: 2.5em !important;
+    gap: 3rem !important;
 }
 
 .notion-column{
