--- a/style/main.css
+++ b/style/main.css
@@ -496,7 +496,7 @@ tbody.notion-collection-table__body {
 }
 
 .notion-column-list {
-  gap: 2.5em !important;
+  gap: 3rem !important;
 }
 
 .notion-column {
