--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -278,7 +278,7 @@ html ::-webkit-scrollbar{
     transition: box-shadow .2s ease-out !important;
     color: var(--color-text-default) !important;
 
-    .notion-callout .notion-column-list .notion-image{
+    .notion-image{
         width: auto !important;
         height: auto !important;
         border-radius: 20px !important;
