--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -278,19 +278,18 @@ html ::-webkit-scrollbar{
     transition: box-shadow .2s ease-out !important;
     color: var(--color-text-default) !important;
 
-    .notion-image{
-        width: auto !important;
-        height: auto !important;
-        border-radius: 20px !important;
-
-        img{
-            border-radius: 20px !important;
-        }
-    }
-
     .notion-column-list{
         flex-wrap: nowrap !important;
     }
+}
+
+.notion-callout .bg-gray-light .notion-callout__content .notion-column-list .notion-column .notion-image{
+    width: 100% !important;
+    height: 100% !important;
+
+}
+.notion-callout .notion-column-list .notion-image img{
+    border-radius: 20px !important;
 }
 
 
