--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -268,7 +268,7 @@ html ::-webkit-scrollbar{
     margin-left: -50vw !important;
     height: auto !important;
     left: 50% !important;
-    background: var(--color-link-default) !important;
+    background: var(--color-callout-background) !important;
     border-radius: 0 !important;
 }
 
