--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -293,6 +293,10 @@ html ::-webkit-scrollbar{
     border-radius: 20px !important;
 }
 
+.notion-callout.bg-gray-light .notion-column:first-child {
+    width: calc((100% - 46px *1)*0.423077) !important;
+}
+
 
 
 //callouts--Reviews
