--- a/style/main.css
+++ b/style/main.css
@@ -571,6 +571,10 @@ html ::-webkit-scrollbar-thumb {
   border-radius: 20px !important;
 }
 
+.notion-callout.bg-gray-light .notion-column:first-child {
+  width: calc((100% - 46px) * 0.423077) !important;
+}
+
 .notion-callout {
   padding: 2rem !important;
   padding-top: 20px !important;
