--- a/style/main.css
+++ b/style/main.css
@@ -563,6 +563,15 @@ html ::-webkit-scrollbar-thumb {
   width: calc((100% - 46px) * 0.423077) !important;
 }
 
+.notion-divider {
+  border-bottom: 1px solid var(--color-border-default) !important;
+  margin-left: -40px !important;
+  margin-right: -32px !important;
+  margin-top: 0px !important;
+  margin-bottom: 0px !important;
+  width: unset !important;
+}
+
 .notion-callout {
   padding: 2rem !important;
   padding-top: 20px !important;
