--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -211,7 +211,8 @@ tbody.notion-collection-table__body{
 
 //Notion Columns
 .notion-column-list{
-    gap: 3rem !important;
+    gap: 3.5rem !important;
+    flex-wrap: nowrap !important;
 }
 
 .notion-column{
