--- a/sass/base/_colors.scss
+++ b/sass/base/_colors.scss
@@ -11,7 +11,7 @@
     --color-cta-background: rgb(237, 237, 237) !important;
     --color-cta-text: rgb(32, 32, 32) !important;
     --color-callout-background:rgb(255 255 255/3%) !important;
-    --color-bg-hover-default:rgb(37 37 37) !important;
+    --color-bg-hover-default:rgb(255 255 255/3%) !important;
     --scrollbar-thumb-color: rgba(110, 110, 110, 0.1) !important;
 }
 
@@ -27,6 +27,6 @@
     --color-cta-background: rgb(32, 32, 32) !important;
     --color-cta-text: rgb(237, 237, 237) !important;
     --color-callout-background:rgb(30 88 255/6%) !important;
-    --color-bg-hover-default:rgb(236 226 217) !important;
+    --color-bg-hover-default:rgb(30 88 255/6%) !important;
     --scrollbar-thumb-color: rgba(158, 158, 158, 0.1) !important;
 }
