remove first child

--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -285,9 +285,9 @@ html ::-webkit-scrollbar{
     border-radius: 10px !important;
 }
 
-.notion-callout.bg-gray-light .notion-column:first-child {
+/* .notion-callout.bg-gray-light .notion-column:first-child {
     width: calc((100% - 46px *1)*0.423077) !important;
-}
+} */
 
 //divider
 .notion-divider{
