box shadow none

--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -126,6 +126,7 @@ tbody.notion-collection-table__body{
     background: none !important;
     -webkit-transition: all 0.4s !important;
     transition: all 0.4s !important;
+    box-shadow: none !important;
 }
 
 .notion-collection-card:hover{
