--- a/sass/base/_colors.scss
+++ b/sass/base/_colors.scss
@@ -29,4 +29,5 @@
     --color-callout-background:rgb(30 88 255/6%) !important;
     --color-bg-hover-default:rgb(30 88 255/6%) !important;
     --scrollbar-thumb-color: rgba(158, 158, 158, 0.1) !important;
+    --collection-card-shadow: rgb(225 228 238 / 58%) 0px 0px 0px 1px, rgb(183 188 204 / 46%) 0px 1px 15px !important
 }
