--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -328,9 +328,9 @@ html ::-webkit-scrollbar{
     display: none !important;
 }
 
-.notion-callout .notion-column:first-child{
+/* .notion-callout .notion-column:first-child{
     width: fit-content !important;
-}
+} */
 
 .notion-callout .notion-column:last-child{
     margin-inline-start: 0px !important;
