--- a/sass/layout/_nav.scss
+++ b/sass/layout/_nav.scss
@@ -1,6 +1,7 @@
 //navigation
 .super-navbar{
-    width: calc(100% - 193px) !important;
+    /* width: calc(100% - 193px) !important; */
+    width: calc(100% - 600px) !important;
     height: 65px !important;
     margin: 20px auto !important;
     padding: 0px 0px !important;
@@ -93,5 +94,9 @@
 }
 
 
+@media (max-width: 546px){
+    .super-navbar{
+        width: calc(100% - 40px) !important;
+    }
 
-
+}
