--- a/sass/layout/_nav.scss
+++ b/sass/layout/_nav.scss
@@ -1,7 +1,7 @@
 //navigation
 .super-navbar{
     /* width: calc(100% - 193px) !important; */
-    width: calc(100% - 600px) !important;
+    max-width: (1680px - 200px) !important
     height: 65px !important;
     margin: 20px auto !important;
     padding: 0px 0px !important;
@@ -31,6 +31,8 @@
     width: 22px !important;
     height: 22px !important;
     transition: all .3s ease-in-out !important;
+    opacity: 0.5 !important;
+    cursor: pointer !important;
     /* margin-right: 25px !important;
     margin-left: -10px !important; */
 }
@@ -73,6 +75,10 @@
 
 .theme-default .light-mode-icon{
     display: none !important;
+}
+
+.theme-default .super-navbar__button{
+    stroke: var(--color-text-default) !important;
 }
 
 //hamburger menu
