--- a/style/main.css
+++ b/style/main.css
@@ -201,6 +201,8 @@ p {
   width: 22px !important;
   height: 22px !important;
   transition: all 0.3s ease-in-out !important;
+  opacity: 0.5 !important;
+  cursor: pointer !important;
   /* margin-right: 25px !important;
   margin-left: -10px !important; */
 }
@@ -236,6 +238,10 @@ p {
 
 .theme-default .light-mode-icon {
   display: none !important;
+}
+
+.theme-default .super-navbar__button {
+  stroke: var(--color-text-default) !important;
 }
 
 /* .notion-dropdown__menu-header, .notion-dropdown__option-icon, .notion-dropdown__button svg:first-of-type {
