--- a/sass/layout/_nav.scss
+++ b/sass/layout/_nav.scss
@@ -1,7 +1,7 @@
 //navigation
 .super-navbar{
     /* width: calc(100% - 193px) !important; */
-    max-width: (1680px - 200px) !important
+    max-width: (1680px - 200px) !important;
     height: 65px !important;
     margin: 20px auto !important;
     padding: 0px 0px !important;
