--- a/style/main.css
+++ b/style/main.css
@@ -96,8 +96,7 @@ p, h1, h2, h3, h4, h5, h6 {
 }
 
 :root {
-  --font-size-0: 0.875rem !important;
-  --font-size-1: 1.25rem;
+  --font-size-1: 1rem;
   --font-size-2: 1.5rem;
   --font-size-3: 2rem;
   --font-size-4: 2.5rem;
@@ -135,7 +134,7 @@ h3.notion-heading {
 }
 
 p {
-  font-size: var(--font-size-0) !important;
+  font-size: var(--font-size-1) !important;
 }
 
 .notion-header__cover.has-cover {
@@ -170,7 +169,7 @@ p {
 
 .super-navbar {
   /* width: calc(100% - 193px) !important; */
-  width: calc(100% - 600px) !important;
+  max-width: 1480px !important;
   height: 65px !important;
   margin: 20px auto !important;
   padding: 0px 0px !important;
@@ -344,6 +343,7 @@ tbody.notion-collection-table__body {
   display: grid !important;
   grid-template-columns: 1fr 1fr !important;
   gap: 3rem !important;
+  font-size: var(--font-size-1);
 }
 
 .notion-collection-table {
@@ -593,7 +593,7 @@ html ::-webkit-scrollbar-thumb {
   border: 1px solid var(--color-border-default) !important;
   border-radius: 20px !important;
   margin-bottom: 24px !important;
-  font-size: var(--font-size-0) !important;
+  font-size: var(--font-size-1) !important;
 }
 
 #page-index .notion-callout {
