--- a/sass/layout/_nav.scss
+++ b/sass/layout/_nav.scss
@@ -27,6 +27,15 @@
     transition: opacity .3s ease-in-out !important;
 }
 
+.super-navbar__menu{
+    border-radius: 20px !important;
+    border: 1px solid var(--color-border-default) !important;
+    color: var(--color-text-default) !important;
+    background: var(--color-bg-default) !important;
+    right: 310px !important;
+
+}
+
 .theme-switch{
     width: 22px !important;
     height: 22px !important;
