chanes on episode page

--- a/sass/pages/_episodes.scss
+++ b/sass/pages/_episodes.scss
@@ -43,3 +43,7 @@
     background: var(--color-hover-default) !important;
 
 }
+
+.parent-page__index .notion-root{
+    width: 58.33333333% !important;
+}
