--- a/style/main.css
+++ b/style/main.css
@@ -674,4 +674,12 @@ html ::-webkit-scrollbar-thumb {
   .notion-collection-card__content {
     width: auto !important;
   }
+}
+@media (max-width: 546px) {
+  h1.notion-heading {
+    font-size: var(--font-size-4) !important;
+  }
+  .notion-column-list {
+    flex-direction: column !important;
+  }
 }/*# sourceMappingURL=main.css.map */
