--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -398,6 +398,11 @@ html ::-webkit-scrollbar{
     .notion-callout__content{
         margin-inline-start: 0px !important;
     }
+
+    //gallery
+    .notion-collection-gallery.medium{
+        grid-template-columns: 1fr !important;
+    }
 }
 
 
