--- a/style/main.css
+++ b/style/main.css
@@ -685,4 +685,7 @@ html ::-webkit-scrollbar-thumb {
   .notion-callout__content {
     margin-inline-start: 0px !important;
   }
+  .notion-collection-gallery.medium {
+    grid-template-columns: 1fr !important;
+  }
 }/*# sourceMappingURL=main.css.map */
