--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -403,6 +403,15 @@ html ::-webkit-scrollbar{
     .notion-collection-gallery.medium{
         grid-template-columns: 1fr !important;
     }
+
+    //table
+    tbody.notion-collection-table__body{
+        grid-template-columns: 1fr !important;
+    }
+    .notion-collection-table tr{
+        padding: 2rem !important;
+        grid-template-columns: 1fr !important;
+    }
 }
 
 
