--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -392,6 +392,10 @@ html ::-webkit-scrollbar{
         font-size: var(--font-size-4) !important;
     }
 
+    h3.notion-heading{
+        font-size: var(--font-size-2) !important;
+    }
+
     .notion-column-list{
         flex-direction: column !important;
     }
