--- a/style/main.css
+++ b/style/main.css
@@ -679,6 +679,9 @@ html ::-webkit-scrollbar-thumb {
   h1.notion-heading {
     font-size: var(--font-size-4) !important;
   }
+  h3.notion-heading {
+    font-size: var(--font-size-2) !important;
+  }
   .notion-column-list {
     flex-direction: column !important;
   }
