--- a/style/main.css
+++ b/style/main.css
@@ -3,6 +3,7 @@
   --color-bg-default: rgb(32, 32, 32) !important;
   --theme-gradient: linear-gradient(to bottom, rgba(32, 32, 32, 0), rgba(32, 32, 32, 1) 98%) !important;
   --color-border-default: hsl(0deg 0% 43% / 20%) !important;
+  --color-box-shadow: rgba(0,0,0,.05) 0 10px 20px 0!important;
   --color-bg-transparent-default: rgb(255, 255, 255, 0) !important;
   --color-text-default: hsl(0, 0%, 93%) !important;
   --color-date-default: rgb(152, 144, 144) !important;
@@ -19,6 +20,7 @@
   --color-bg-default: rgb(237, 237, 237) !important;
   --theme-gradient: linear-gradient(to bottom, rgba(237, 237, 237, 0), rgba(237, 237, 237, 1) 98%)!important;
   --color-border-default: hsla(0, 0%, 62%, 0.3) !important;
+  --color-box-shadow: rgba(30,88,255,.05) 0 10px 20px 0!important;
   --color-bg-transparent-default: rgb(0, 0, 0, 0) !important;
   --color-text-default: rgb(32, 32, 32) !important;
   --color-date-default: rgb(178, 178, 178) !important;
@@ -618,6 +620,12 @@ html ::-webkit-scrollbar-thumb {
 #page-index .notion-callout {
   margin: 0 !important;
   overflow: visible !important;
+}
+
+#page-index .notion-callout:hover {
+  box-shadow: var(--color-box-shadow) !important;
+  border: 1px solid transparent !important;
+  transform: translateY(-2px) !important;
 }
 
 .notion-callout .notion-column-list {
