--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -311,6 +311,7 @@ html ::-webkit-scrollbar{
     padding: 2rem !important;
     padding-top: 20px !important;
     border: 1px solid var(--color-border-default) !important;
+    transition: all .15s ease-out !important;
     border-radius: 20px !important;
     margin-bottom: 24px !important;
     font-size: var(--font-size-1) !important;
