--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -277,6 +277,12 @@ html ::-webkit-scrollbar{
     }
 }
 
+#page-index .notion-callout.bg-gray-light:hover{
+    box-shadow: none !important;
+    border: 1px solid var(--color-border-default) !important;
+    transform: none !important;
+}
+
 #page-index .notion-callout.bg-gray-light .notion-image{
     width: 100% !important;
     height: 100% !important;
