--- a/style/main.css
+++ b/style/main.css
@@ -582,6 +582,12 @@ html ::-webkit-scrollbar-thumb {
   gap: 3rem !important;
 }
 
+#page-index .notion-callout.bg-gray-light:hover {
+  box-shadow: none !important;
+  border: 1px solid var(--color-border-default) !important;
+  transform: none !important;
+}
+
 #page-index .notion-callout.bg-gray-light .notion-image {
   width: 100% !important;
   height: 100% !important;
