--- a/style/main.css
+++ b/style/main.css
@@ -380,6 +380,7 @@ tbody.notion-collection-table__body {
   padding: 2rem !important;
   display: grid !important;
   grid-template-columns: 1fr !important;
+  flex: 1 !important;
   border-collapse: inherit !important;
   border: 1px solid var(--color-border-default) !important;
   border-radius: 20px !important;
