--- a/style/main.css
+++ b/style/main.css
@@ -126,13 +126,15 @@ h1.notion-heading strong, h2.notion-heading strong, h3.notion-heading strong {
 h2.notion-heading {
   font-size: var(--font-size-5) !important;
   line-height: 1.1 !important;
-  padding-bottom: 2.5rem !important;
+  margin-bottom: 1.5rem !important;
 }
 
 h3.notion-heading {
   font-size: var(--font-size-4) !important;
   font-weight: 500 !important;
   align-self: center !important;
+  line-height: 1.3 !important;
+  margin-bottom: 1.5rem !important;
 }
 
 p {
