--- a/style/main.css
+++ b/style/main.css
@@ -120,7 +120,6 @@ h1.notion-heading {
 h1.notion-heading strong, h2.notion-heading strong, h3.notion-heading strong {
   font-weight: 400 !important;
   line-height: 1 !important;
-  text-align: left !important;
 }
 
 h2.notion-heading {
@@ -132,9 +131,14 @@ h2.notion-heading {
 h3.notion-heading {
   font-size: var(--font-size-4) !important;
   font-weight: 500 !important;
-  align-self: center !important;
+  text-align: center !important;
   line-height: 1.3 !important;
   margin-bottom: 1.5rem !important;
+}
+
+h3.notion-heading strong {
+  text-align: left !important;
+  background: var(--color-link-default) !important;
 }
 
 p {
